<resources>
    <string name="app_name">WaliQuizApp</string>
    <string name="quizapp">QuizApp!</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="welcome">Welcome</string>
    <string name="e_g_john">e.g John</string>
    <string name="start">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="image">image</string>
    <string name="result">Result</string>
    <string name="finish">FINISH</string>
</resources>